@@ -24,6 +24,9 @@ GNU myserver NEWS                                    -*- outline -*-
 
    Web-based Distributed Authoring and Versioning (WebDAV) support.
 
+   Possibility to change response header values from the local configuration
+   files.
+
 * Noteworthy changes in release 0.9.2
 
 ** Bug fixes
@@ -33,8 +36,7 @@ GNU myserver NEWS                                    -*- outline -*-
   Sockets operations under Windows are now done using gnulib.
 
   Fix the X-Sendfile directive when using keep-alive connections.
-
-
+
 * Noteworthy changes in release 0.9.1
 
 ** New features
